--- a/.gitignore
+++ b/.gitignore
@@ -116,7 +116,7 @@ pip-selfcheck.json
 .idea/dictionaries
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
-
+.telegramtoken
 # Sensitive or high-churn files:
 .idea/dataSources.ids
 .idea/dataSources.xml
