--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -15,6 +15,8 @@ services:
             ipv4_address: 192.168.20.100
       depends_on:
         - db-node
+      volumes:
+        - /appdata/img:/img
   db-node:
     container_name: db-node65
     image: mysql:latest
@@ -26,6 +28,9 @@ services:
           aliases:
             - mysql
           ipv4_address: 192.168.20.200
+    volumes:
+      - /appdata/db/init:/docker-entrypoint-initdb.d
+      - /appdata/db/db_data:/var/lib/mysql
 networks:
   bond:
     driver: bridge
