--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -1,39 +1,39 @@
-#version: '1.2'
+version: '2.0'
 services:
-  app:
+    app:
+        env_file:
+          - .env
+        container_name: ilyaapp55
+        image: ilyaapp:007
+        build:
+          context: .
+          dockerfile: Dockerfile
+        networks:
+          bond:
+              aliases:
+                - ilyaapp
+              ipv4_address: 192.168.20.100
+        depends_on:
+          - db-node
+        volumes:
+          - /appdata/img:/img
+    db-node:
+      container_name: db-node65
+      image: mysql:latest
+      #restart: always
       env_file:
         - .env
-      container_name: ilyaapp55
-      image: ilyaapp:007
-      build:
-        context: .
-        dockerfile: Dockerfile
       networks:
         bond:
             aliases:
-              - ilyaapp
-            ipv4_address: 192.168.20.100
-      depends_on:
-        - db-node
+              - mysql
+            ipv4_address: 192.168.20.200
       volumes:
-        - /appdata/img:/img
-  db-node:
-    container_name: db-node65
-    image: mysql:latest
-    #restart: always
-    env_file:
-      - .env
-    networks:
-      bond:
-          aliases:
-            - mysql
-          ipv4_address: 192.168.20.200
-    volumes:
-      - /appdata/db/init:/docker-entrypoint-initdb.d
-      - /appdata/db/db_data:/var/lib/mysql
-networks:
-  bond:
-    driver: bridge
-    external: true
-#sudo docker network create bond --driver=bridge --subnet=192.0.0.0/8
-#https://onexlab-io.medium.com/docker-compose-mysql-initdb-4c3388047dea
+        - /appdata/db/init:/docker-entrypoint-initdb.d
+        - /appdata/db/db_data:/var/lib/mysql
+  networks:
+    bond:
+      driver: bridge
+      external: true
+  #sudo docker network create bond --driver=bridge --subnet=192.0.0.0/8
+  #https://onexlab-io.medium.com/docker-compose-mysql-initdb-4c3388047dea
