--- a/Docker-compose.yaml
+++ b/Docker-compose.yaml
@@ -2,14 +2,17 @@ version: '2.0'
 services:
     db-node:
       container_name: db-node65
-      image: mysql:latest
+      image: database:001
+      build:
+        context: .
+        dockerfile: Dockerfile_SQL
       #restart: always
       env_file:
         - .env
       networks:
         bond:
             aliases:
-              - mysql
+              - mysql_db
             ipv4_address: 192.168.20.200
       volumes:
         #- /appdata/db/init:/docker-entrypoint-initdb.d
@@ -17,8 +20,8 @@ services:
     app:
       env_file:
         - .env
-      container_name: ilyaapp
-      image: ilyaapp:001
+      container_name: ilya_app
+      image: ilya_app:001
       build:
         context: .
         dockerfile: Dockerfile
