--- a/Dockerfile_SQL
+++ b/Dockerfile_SQL
@@ -1,6 +1,6 @@
 FROM mysql:latest
 
-MAINTAINER baeldung.com
+MAINTAINER IlyaPolonsky
 
 RUN chown -R mysql:root /var/lib/mysql/
 
@@ -14,9 +14,9 @@ ENV MYSQL_USER=$MYSQL_USER
 ENV MYSQL_PASSWORD=$MYSQL_PASSWORD
 ENV MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
 
-ADD /appdata/db/init/init.sql /etc/mysql/data.sql
+ADD /appdata/db/init/initmysql.sql /etc/mysql/initmysql.sql
 
-RUN sed -i 's/MYSQL_DATABASE/'$MYSQL_DATABASE'/g' /etc/mysql/data.sql
-RUN cp /etc/mysql/data.sql /docker-entrypoint-initdb.d
+RUN sed -i 's/MYSQL_DATABASE/'$MYSQL_DATABASE'/g' /etc/mysql/initmysql.sql
+RUN cp /etc/mysql/initmysql.sql /docker-entrypoint-initdb.d
 
 EXPOSE 3306
