--- a/Dockerfile_SQL
+++ b/Dockerfile_SQL
@@ -1,5 +1,5 @@
 FROM mysql:latest
-WORKDIR .
+WORKDIR /
 
 MAINTAINER IlyaPolonsky
 
@@ -14,9 +14,9 @@ ENV MYSQL_DATABASE=$MYSQL_DATABASE
 ENV MYSQL_USER=$MYSQL_USER
 ENV MYSQL_PASSWORD=$MYSQL_PASSWORD
 ENV MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
-
-ADD /appdata/db/init/initmysql.sql /etc/mysql/initmysql.sql
-
+WORKDIR /appdata/db/init
+ADD . /etc/mysql/initmysql.sql
+WORKDIR /
 RUN sed -i 's/MYSQL_DATABASE/'$MYSQL_DATABASE'/g' /etc/mysql/initmysql.sql
 RUN cp /etc/mysql/initmysql.sql /docker-entrypoint-initdb.d
 
