--- a/Dockerfile_SQL
+++ b/Dockerfile_SQL
@@ -16,6 +16,6 @@ ENV MYSQL_PASSWORD=$MYSQL_PASSWORD
 ENV MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
 WORKDIR /appdata/db/init
 ADD . /etc/mysql/initmysql.sql
-RUN cp /etc/mysql/initmysql.sql /docker-entrypoint-initdb.d
+RUN cp -r /etc/mysql/initmysql.sql /docker-entrypoint-initdb.d
 
 EXPOSE 3306
