--- a/Dockerfile_SQL
+++ b/Dockerfile_SQL
@@ -10,9 +10,9 @@ ARG MYSQL_ROOT_USER
 ARG MYSQL_ROOT_PASSWORD
 ARG MYSQL_PASSWORD
 
-ENV MYSQL_DATABASE=$MYSQL_DATABASE
-ENV MYSQL_USER=$MYSQL_USER
-ENV MYSQL_PASSWORD=$MYSQL_PASSWORD
+ENV MYSQL_DATABASE=$MYSQL_DB_NAME
+ENV MYSQL_USER=$MYSQL_ROOT_USER
+ENV MYSQL_PASSWORD=$MYSQL__ROOT_PASSWORD
 ENV MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
 WORKDIR /appdata/db/init
 ADD . /etc/mysql/initmysql.sql
