--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # Created by .ignore support plugin (hsz.mobi)
+
+# Project Specific Ignores
+.telegramToken
+
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -153,4 +157,3 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-
